--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,3 +28,8 @@
     src: local_settings.py.j2
     dest: /etc/graphite/local_settings.py
   notify: reload apache
+
+- name: Copy carbon storage schema
+  template:
+    src: storage-schemas.conf.j2
+    dest: /etc/carbon/storage-schemas.conf
